fix section2 z-index

--- a/css/index.css
+++ b/css/index.css
@@ -497,7 +497,7 @@ span {
 
 #section2 {
 	display: none;
-	z-index: 10;
+	z-index: 15;
 	width: 100%;
 	height: 100%;
 	position: absolute;
